feature/results object (#18)
* feat(result): create result and error objects

* build(properties): create directory build props

* feat(enumeration): create enumeration class

* feat(entity): create entity primitive type

* feat(sample): update sample to be eShopOnContainers like

* feat(mediator): add command and query separation interfaces

* feat: add jetbrains annotations

* feat(nswag): update nswag generation packages

* test(redis): add tests for redis config

* test(integration): begin adding back integration tests

* test(sample): add integration tests

* feat(codecov): add codecov config yml file

* test(sample): add more integration tests to product controller
