# docs/waystone-sample-api-swagger.json
@@ -1,5 +1,5 @@
 {
-  "x-generator": "NSwag v13.18.0.0 (NJsonSchema v10.8.0.0 (Newtonsoft.Json v13.0.0.0))",
+  "x-generator": "NSwag v13.18.2.0 (NJsonSchema v10.8.0.0 (Newtonsoft.Json v13.0.0.0))",
   "openapi": "3.0.0",
   "info": {
     "title": "Waystone.Sample.Api",
@@ -7,71 +7,31 @@
     "version": "v1"
   },
   "paths": {
-    "/weatherforecast": {
+    "/products": {
       "get": {
         "tags": [
-          "WeatherForecast"
+          "Products"
         ],
-        "summary": "Gets a set of weather forecasts.",
-        "operationId": "WeatherForecast_Get",
+        "summary": "List a page of products.",
+        "operationId": "Products_List",
         "parameters": [
           {
-            "name": "DesiredSummary",
+            "name": "Limit",
             "in": "query",
-            "description": "When specified, the weather forecasts found will only have the specified summary.",
             "schema": {
-              "nullable": true,
-              "oneOf": [
-                {
-                  "$ref": "#/components/schemas/ForecastSummary"
-                }
-              ]
+              "type": "integer",
+              "format": "int32"
             },
             "x-position": 1
           },
           {
-            "name": "MinimumTemperatureC",
-            "in": "query",
-            "description": "When specified, the weather forecasts found will all have TemperatureC above this value.",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "nullable": true
-            },
-            "x-position": 2
-          },
-          {
-            "name": "MaximumTemperatureC",
-            "in": "query",
-            "description": "When specified, the weather forecasts found will all have TemperatureC below this value.",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "nullable": true
-            },
-            "x-position": 3
-          },
-          {
-            "name": "Limit",
-            "in": "query",
-            "description": "The maximum number of records to return;",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "example": 10
-            },
-            "x-position": 4
-          },
-          {
             "name": "Cursor",
             "in": "query",
-            "description": "The offset (from 0) of the first record to return;",
             "schema": {
               "type": "integer",
-              "format": "int32",
-              "example": 0
+              "format": "int32"
             },
-            "x-position": 5
+            "x-position": 2
           },
           {
             "name": "X-Correlation-ID",
@@ -85,16 +45,6 @@
           }
         ],
         "responses": {
-          "400": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/NotFoundProblemDetails"
-                }
-              }
-            }
-          },
           "500": {
             "description": "",
             "content": {
@@ -106,11 +56,84 @@
             }
           },
           "200": {
-            "description": "The paginated list of WeatherForecastDto.",
+            "description": "A paginated response of products.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PaginatedResponseOfWeatherForecastDto"
+                  "$ref": "#/components/schemas/PaginatedResponseOfProductDto"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Adds a new product.",
+        "operationId": "Products_Add",
+        "parameters": [
+          {
+            "name": "X-Correlation-ID",
+            "in": "header",
+            "description": "The correlation id to be associated with the request. One will be generated by the API if not provided.",
+            "schema": {
+              "type": "string",
+              "format": "guid",
+              "example": "72b264f5-d6e9-4e74-a6ce-d398e2c8421a"
+            }
+          }
+        ],
+        "requestBody": {
+          "x-name": "request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateProductCommand"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "500": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnknownProblemDetails"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "The created product.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductDto"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StatusCodeProblemDetails"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StatusCodeProblemDetails"
                 }
               }
             }
@@ -118,19 +141,19 @@
         }
       }
     },
-    "/weatherforecast/{id}": {
+    "/products/{id}": {
       "get": {
         "tags": [
-          "WeatherForecast"
+          "Products"
         ],
-        "summary": "Gets a weather forecast by it's id.",
-        "operationId": "WeatherForecast_GetById",
+        "summary": "Gets a product using it's ID.",
+        "operationId": "Products_GetById",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "description": "The id of the forecast.",
+            "description": "The ID of the product.",
             "schema": {
               "type": "string",
               "format": "guid"
@@ -149,16 +172,6 @@
           }
         ],
         "responses": {
-          "400": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/NotFoundProblemDetails"
-                }
-              }
-            }
-          },
           "500": {
             "description": "",
             "content": {
@@ -170,14 +183,69 @@
             }
           },
           "200": {
-            "description": "The WeatherForecastDto",
+            "description": "The product corresponding to the provided ID.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WeatherForecastDto"
+                  "$ref": "#/components/schemas/ProductDto"
                 }
               }
             }
+          },
+          "404": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Deletes an existing product.",
+        "operationId": "Products_Delete",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "The ID of the product to delete.",
+            "schema": {
+              "type": "string",
+              "format": "guid"
+            },
+            "x-position": 1
+          },
+          {
+            "name": "X-Correlation-ID",
+            "in": "header",
+            "description": "The correlation id to be associated with the request. One will be generated by the API if not provided.",
+            "schema": {
+              "type": "string",
+              "format": "guid",
+              "example": "72b264f5-d6e9-4e74-a6ce-d398e2c8421a"
+            }
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnknownProblemDetails"
+                }
+              }
+            }
+          },
+          "204": {
+            "description": "No content."
           }
         }
       }
@@ -185,14 +253,13 @@
   },
   "components": {
     "schemas": {
-      "NotFoundProblemDetails": {
+      "UnknownProblemDetails": {
         "allOf": [
           {
             "$ref": "#/components/schemas/StatusCodeProblemDetails"
           },
           {
             "type": "object",
-            "description": "Not found problem details.",
             "additionalProperties": {
               "nullable": true
             }
@@ -245,27 +312,11 @@
           }
         }
       },
-      "UnknownProblemDetails": {
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/StatusCodeProblemDetails"
-          },
-          {
-            "type": "object",
-            "description": "Internal server error problem details.",
-            "additionalProperties": {
-              "nullable": true
-            }
-          }
-        ]
-      },
-      "PaginatedResponseOfWeatherForecastDto": {
+      "PaginatedResponseOfProductDto": {
         "type": "object",
-        "description": "Represents a page of records.",
         "additionalProperties": false,
         "properties": {
           "links": {
-            "description": "The previous, current, and next page Links.",
             "nullable": true,
             "oneOf": [
               {
@@ -275,106 +326,131 @@
           },
           "total": {
             "type": "integer",
-            "description": "The total number of records available.",
-            "format": "int32",
-            "example": 100
+            "format": "int32"
           },
           "results": {
             "type": "array",
-            "description": "The current page of records.",
             "items": {
-              "$ref": "#/components/schemas/WeatherForecastDto"
+              "$ref": "#/components/schemas/ProductDto"
             }
           }
         }
       },
       "Links": {
         "type": "object",
-        "description": "The links used to navigate between pages in a paginated collection.",
         "additionalProperties": false,
         "properties": {
           "self": {
             "type": "string",
-            "description": "The URI link to the current page of results.",
             "format": "uri",
             "nullable": true
           },
           "next": {
             "type": "string",
-            "description": "The URI link to the next page of results if it exists.",
             "format": "uri",
             "nullable": true
           },
           "previous": {
             "type": "string",
-            "description": "The URI link to the previous page of results if it exists.",
             "format": "uri",
             "nullable": true
           }
         }
       },
-      "WeatherForecastDto": {
+      "ProductDto": {
         "type": "object",
-        "description": "A weather forecast.",
+        "description": "A public facing representation of the Product entity.",
         "additionalProperties": false,
         "properties": {
           "id": {
             "type": "string",
-            "description": "The id of the forecast.",
+            "description": "The product's ID.",
             "format": "guid"
           },
-          "temperatureC": {
-            "type": "integer",
-            "description": "The temperature in Celsius.",
-            "format": "int32"
-          },
-          "temperatureF": {
-            "type": "integer",
-            "description": "The temperature in Fahrenheit.",
-            "format": "int32"
-          },
-          "summary": {
-            "description": "The summary of the forecast.",
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/ForecastSummary"
-              }
-            ]
-          },
-          "dateTime": {
+          "name": {
             "type": "string",
-            "description": "The date of the forecast.",
-            "format": "date-time"
+            "description": "The product's name."
+          },
+          "description": {
+            "type": "string",
+            "description": "The product's description."
+          },
+          "amountExcludingTax": {
+            "type": "number",
+            "description": "The product's price (excluding tax).",
+            "format": "decimal"
+          },
+          "tax": {
+            "type": "number",
+            "description": "The amount of tax charged for this product.",
+            "format": "decimal"
+          },
+          "total": {
+            "type": "number",
+            "description": "The total amount charged for this product.",
+            "format": "decimal"
           }
         }
       },
-      "ForecastSummary": {
-        "type": "string",
-        "description": "",
-        "x-enumNames": [
-          "Freezing",
-          "Bracing",
-          "Chilly",
-          "Cool",
-          "Mild",
-          "Warm",
-          "Balmy",
-          "Hot",
-          "Sweltering",
-          "Scorching"
-        ],
-        "enum": [
-          "Freezing",
-          "Bracing",
-          "Chilly",
-          "Cool",
-          "Mild",
-          "Warm",
-          "Balmy",
-          "Hot",
-          "Sweltering",
-          "Scorching"
+      "NotFoundProblemDetails": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/StatusCodeProblemDetails"
+          },
+          {
+            "type": "object",
+            "additionalProperties": {
+              "nullable": true
+            }
+          }
         ]
+      },
+      "CreateProductCommand": {
+        "type": "object",
+        "description": "Command for creating a new Product",
+        "additionalProperties": false,
+        "required": [
+          "name",
+          "amountExcludingTax",
+          "taxPercentage"
+        ],
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "The name of the new product.",
+            "minLength": 1,
+            "nullable": false
+          },
+          "description": {
+            "type": "string",
+            "description": "The description of the new product.",
+            "nullable": true
+          },
+          "amountExcludingTax": {
+            "type": "number",
+            "description": "The amount to charge for the product (excluding tax).",
+            "format": "decimal",
+            "minimum": 0.0,
+            "minLength": 1,
+            "nullable": false,
+            "exclusiveMinimum": true
+          },
+          "taxPercentage": {
+            "type": "number",
+            "description": "The percentage of tax to be changed on this product.",
+            "format": "decimal",
+            "minimum": 0.0,
+            "minLength": 1,
+            "nullable": false
+          },
+          "discountPercentage": {
+            "type": "number",
+            "description": "An optional discount that will be applied on the product's price.",
+            "format": "decimal",
+            "minimum": 0.0,
+            "nullable": true
+          }
+        }
       }
     }
   }
