# sample/Waystone.Sample.Application/Products/DeleteProduct/DeleteProductCommandValidator.cs
@@ -1,0 +1,11 @@
+﻿namespace Waystone.Sample.Application.Products.DeleteProduct;
+
+using FluentValidation;
+
+internal sealed class DeleteProductCommandValidator : AbstractValidator<DeleteProductCommand>
+{
+    public DeleteProductCommandValidator()
+    {
+        RuleFor(x => x.Id).NotEmpty();
+    }
+}
