# sample/Waystone.Sample.Application/Products/GetProduct/GetProductByIdQueryValidator.cs
@@ -1,0 +1,11 @@
+﻿namespace Waystone.Sample.Application.Products.GetProduct;
+
+using FluentValidation;
+
+internal sealed class GetProductByIdQueryValidator : AbstractValidator<GetProductByIdQuery>
+{
+    public GetProductByIdQueryValidator()
+    {
+        RuleFor(x => x.Id).NotEmpty();
+    }
+}
